--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -69,7 +69,9 @@ Developer: Sergio Pacheco
                                     </div>
                                     <div style = "margin-top: 1rem;">
                                         <i class="fas fa-map-marker-alt"></i><br>
-                                        535-C Clemson Rd, Columbia, SC 29229
+                                        <a href = "https://www.google.com/maps/place/Aquarium+Specialty/@34.1132621,-80.8536138,17z/data=!3m2!4b1!5s0x88f8ab064995ba81:0xcbac8dcdc8b963bd!4m5!3m4!1s0x88f8ab06618292a7:0xdbcbf9659fe9d037!8m2!3d34.1132621!4d-80.8514251" target = "_blank" class = "address-link">
+                                            535-C Clemson Rd, Columbia, SC 29229
+                                        </a>
                                     </div>
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
@@ -87,10 +89,10 @@ Developer: Sergio Pacheco
                     </div>
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
-                            <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                            <button class = "dropdown-toggle" type = "button" id = "gsTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Gulfstream Tropical Aquarium" src = "images/png/store-logos/wholesale-logos/gulfstream-tropical-logo.png" style = "max-width: 8rem; background: #000; border-radius: 1rem;">
                             </button>
-                            <ul class = "dropdown-menu" aria-labelledby = "asTab">
+                            <ul class = "dropdown-menu" aria-labelledby = "gsTab">
                                 <span class = "dropdown-header">Location Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -99,7 +101,9 @@ Developer: Sergio Pacheco
                                     </div>
                                     <div style = "margin-top: 1rem;">
                                         <i class="fas fa-map-marker-alt"></i><br>
-                                        470 SW 9th St, Dania Beach, FL 33004
+                                        <a href = "https://www.google.com/maps/place/Gulfstream+Tropical+Aquarium/@26.03972,-80.1521727,17z/data=!3m1!4b1!4m5!3m4!1s0x88d9aa53c007e731:0xf850ac596532570!8m2!3d26.0396454!4d-80.1499778" target = "_blank" class = "address-link">
+                                            470 SW 9th St, Dania Beach, FL 33004
+                                        </a>
                                     </div>
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
@@ -117,10 +121,10 @@ Developer: Sergio Pacheco
                     </div>
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
-                            <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                            <button class = "dropdown-toggle" type = "button" id = "vaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Vasca Aquarium Supply" src = "images/png/store-logos/wholesale-logos/vasca-logo.png" style = "max-width: 14rem ;">
                             </button>
-                            <ul class = "dropdown-menu" aria-labelledby = "asTab">
+                            <ul class = "dropdown-menu" aria-labelledby = "vaTab">
                                 <span class = "dropdown-header">Location Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -129,7 +133,9 @@ Developer: Sergio Pacheco
                                     </div>
                                     <div style = "margin-top: 1rem;">
                                         <i class="fas fa-map-marker-alt"></i><br>
-                                        1536 W Todd Dr, Tempe, AZ 85283
+                                        <a href = "https://www.google.com/maps/place/VASCA+Aquarium+Supply/@33.3536087,-111.9672663,17z/data=!3m1!4b1!4m5!3m4!1s0x872b05c339a43b13:0xc2d95777f164ee14!8m2!3d33.3536084!4d-111.9650373" target = "_blank" class = "address-link">
+                                            1536 W Todd Dr, Tempe, AZ 85283
+                                        </a>
                                     </div>
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
@@ -156,10 +162,10 @@ Developer: Sergio Pacheco
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
-                            <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                                <img alt = "Digitech Aquarium" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
+                            <button class = "dropdown-toggle" type = "button" id = "daTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                <img alt = "Digitech Aquariums" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
                             </button>
-                            <ul class = "dropdown-menu" aria-labelledby = "asTab">
+                            <ul class = "dropdown-menu" aria-labelledby = "daTab">
                                 <span class = "dropdown-header">Location Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -168,7 +174,9 @@ Developer: Sergio Pacheco
                                     </div>
                                     <div style = "margin-top: 1rem;">
                                         <i class="fas fa-map-marker-alt"></i><br> 
-                                        Shop no 12, Chandresh Godavari, CHS, Thane, Maharashtra 421204, India
+                                        <a href = "https://www.google.com/maps/place/Digitech+Aquariums/@19.1554743,73.0762669,17z/data=!3m1!4b1!4m5!3m4!1s0x3be7c116bafd9ed9:0x1db4330aa7cb30a5!8m2!3d19.1554743!4d73.0784556" target = "_blank" class = "address-link">
+                                            Shop no 12, Chandresh Godavari, CHS, Thane, Maharashtra 421204, India
+                                        </a>
                                     </div>
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
@@ -195,10 +203,10 @@ Developer: Sergio Pacheco
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
-                            <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                            <button class = "dropdown-toggle" type = "button" id = "hfTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Happy Fish Food PR" src = "images/png/store-logos/wholesale-logos/happy-fish-logo.png" style = "max-width: 9rem ;">
                             </button>
-                            <ul class = "dropdown-menu" aria-labelledby = "asTab">
+                            <ul class = "dropdown-menu" aria-labelledby = "hfTab">
                                 <span class = "dropdown-header">Location Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -230,10 +238,10 @@ Developer: Sergio Pacheco
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
                     <div class = "col-12 col-lg-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
-                            <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                            <button class = "dropdown-toggle" type = "button" id = "saTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "SHOPR Aquatics" src = "images/png/store-logos/wholesale-logos/shopr-aquatics-logo.png" style = "max-width: 9rem ;">
                             </button>
-                            <ul class = "dropdown-menu" aria-labelledby = "asTab">
+                            <ul class = "dropdown-menu" aria-labelledby = "saTab">
                                 <span class = "dropdown-header">Location Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -242,7 +250,9 @@ Developer: Sergio Pacheco
                                     </div>
                                     <div style = "margin-top: 1rem;">
                                         <i class="fas fa-map-marker-alt"></i><br> 
-                                        53 Shiddeshwari Lane, Dhaka 1217, Bangladesh
+                                        <a href = "https://www.google.com/maps/place/SHOPR+Aquatics/@23.7442556,90.4100352,17z/data=!4m5!3m4!1s0x3755b968e7c81005:0xecef1f64d7d79376!8m2!3d23.7442556!4d90.4122239" target = "_blank" class = "address-link">
+                                            53 Shiddeshwari Lane, Dhaka 1217, Bangladesh
+                                        </a>
                                     </div>
                                 </div>
                                 <span class = "dropdown-header">Products Available</span>
