--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -55,12 +55,15 @@ Developer: Sergio Pacheco
                     USA
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-5 text-center">
+                    <div class = "col-12 col-md-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Aquarium Specialty" src = "images/png/store-logos/wholesale-logos/aqua-spec-logo.png" style = "max-width: 14rem ;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "asTab">
+                                <span class = "close-btn">
+                                    <i class="fas fa-times"></i>
+                                </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -100,12 +103,15 @@ Developer: Sergio Pacheco
                             </ul>
                         </span>
                     </div>
-                    <div class = "col-12 col-md-4 mt-5 text-center">
+                    <div class = "col-12 col-md-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "gsTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Gulfstream Tropical Aquarium" src = "images/png/store-logos/wholesale-logos/gulfstream-tropical-logo.png" style = "max-width: 8rem; background: #000; border-radius: 1rem;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "gsTab">
+                                <span class = "close-btn">
+                                    <i class="fas fa-times"></i>
+                                </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -145,12 +151,15 @@ Developer: Sergio Pacheco
                             </ul>
                         </span>
                     </div>
-                    <div class = "col-12 col-md-4 mt-5 text-center">
+                    <div class = "col-12 col-md-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "vaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Vasca Aquarium Supply" src = "images/png/store-logos/wholesale-logos/vasca-logo.png" style = "max-width: 14rem ;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "vaTab">
+                                <span class = "close-btn">
+                                    <i class="fas fa-times"></i>
+                                </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -197,12 +206,15 @@ Developer: Sergio Pacheco
                     India
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-5 text-center">
+                    <div class = "col-12 col-md-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "daTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Digitech Aquariums" src = "images/png/store-logos/wholesale-logos/digitech-aquariums-logo.png" style = "max-width: 12rem ;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "daTab">
+                                <span class = "close-btn">
+                                    <i class="fas fa-times"></i>
+                                </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -249,12 +261,15 @@ Developer: Sergio Pacheco
                     Puerto Rico
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-5 text-center">
+                    <div class = "col-12 col-md-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "hfTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "Happy Fish Food PR" src = "images/png/store-logos/wholesale-logos/happy-fish-logo.png" style = "max-width: 9rem ;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "hfTab">
+                                <span class = "close-btn">
+                                    <i class="fas fa-times"></i>
+                                </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
@@ -291,12 +306,15 @@ Developer: Sergio Pacheco
                     Bangladesh
                 </div>
                 <div class = "row justify-content-center align-items-center" style = "min-height: 10rem; margin-bottom: 5rem;">
-                    <div class = "col-12 col-md-4 mt-5 text-center">
+                    <div class = "col-12 col-md-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "saTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
                                 <img alt = "SHOPR Aquatics" src = "images/png/store-logos/wholesale-logos/shopr-aquatics-logo.png" style = "max-width: 9rem ;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "saTab">
+                                <span class = "close-btn">
+                                    <i class="fas fa-times"></i>
+                                </span>
                                 <span class = "dropdown-header">Store Information</span>
                                 <div class = "store-details" style = "border: .01rem solid; padding: .5rem; text-align: center;">
                                     <div>
