--- a/wholesale-page.html
+++ b/wholesale-page.html
@@ -58,7 +58,7 @@ Developer: Sergio Pacheco
                     <div class = "col-12 col-md-4 mt-3 text-center">
                         <span class = "dropdown btn-group">
                             <button class = "dropdown-toggle" type = "button" id = "asTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
-                                <img alt = "Aquarium Specialty" src = "images/png/store-logos/wholesale-logos/aqua-spec-logo.png" style = "max-width: 14rem ;">
+                                <img alt = "Aquarium Specialty" src = "images/png/store-logos/wholesale-logos/aqua-spec-logo.png" style = "max-width: 14rem; background: #1e4772; border-radius: 5rem;">
                             </button>
                             <ul class = "dropdown-menu" aria-labelledby = "asTab">
                                 <span class = "close-btn">
